Adjusting CSS symbol

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
           <div class="square-3"></div>
         </div>
       </div>
+      <footer>
+        <p>Created by <a href="https://www.rembertdesigns.co/" target="_blank">Richard Rembert</a></p>
+    </footer>
 </body>
 </html>
